# QauntXAlgo

./: .env.example  .gitignore  LICENSE  Makefile  README.md  pyproject.toml
docker/: Dockerfile  docker-compose.yml
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.jsx
frontend/src/pages/: Dashboard.css  Dashboard.jsx  Portfolio.jsx  QuantLab.css  QuantLab.jsx  Reports.jsx  RiskMgmt.jsx
quantxalgo/: __init__.py
quantxalgo/api/: __init__.py  main.py
quantxalgo/config/: __init__.py  constants.py  logging_config.py  settings.py
quantxalgo/core/: __init__.py  enums.py  events.py  exceptions.py  types.py
quantxalgo/data/: __init__.py  feature_store.py  normalization.py
quantxalgo/data/sources/: __init__.py  base.py  yahoo.py
quantxalgo/engine/: __init__.py  backtest.py  competition.py  event_queue.py  quant_lab.py  regime.py  simulation.py  universal_executor.py  validation.py
quantxalgo/metrics/: __init__.py  risk_metrics.py
quantxalgo/ml/: __init__.py  alpha_model.py  feature_engine.py  signal_combiner.py
quantxalgo/portfolio/: __init__.py  capital.py  manager.py  position.py
quantxalgo/reports/: __init__.py  generator.py  tearsheet.py
quantxalgo/risk/: __init__.py  kill_switch.py  manager.py  overlays.py  stress_test.py
quantxalgo/strategies/: __init__.py  base.py  registry.py
quantxalgo/strategies/mean_reversion/: __init__.py  bollinger.py  rsi.py
quantxalgo/strategies/momentum/: __init__.py  breakout.py  ma_crossover.py
quantxalgo/strategies/statistical/: __init__.py  factor_model.py  pairs_trading.py
quantxalgo/strategies/volatility/: __init__.py  squeeze.py  volatility_breakout.py
scripts/: demo.py  quick_demo.py  test_all_features.py  test_integration.py  verify_all.py
