[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quantxalgo"
version = "0.1.0"
description = "Institutional-Grade Algorithmic Trading & Quant Research Platform"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Waqar Azim", email = "waqarworks11@gmail.com"}
]
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
]

dependencies = [
    # Core
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    
    # API
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    
    # Data Sources
    "yfinance>=0.2.33",
    "aiohttp>=3.9.0",
    "httpx>=0.25.0",
    
    # Database
    "sqlalchemy>=2.0.0",
    
    # ML & Statistics
    "scikit-learn>=1.3.0",
    
    # Visualization
    "plotly>=5.18.0",
    "matplotlib>=3.7.0",
    
    # Utilities
    "structlog>=23.2.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.1",
]

[project.optional-dependencies]
ml = [
    "lightgbm>=4.0.0",
    "statsmodels>=0.14.0",
]

database = [
    "asyncpg>=0.29.0",
    "redis>=5.0.0",
]

dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.11.0",
    "ruff>=0.1.6",
    "mypy>=1.7.0",
]

research = [
    "jupyter>=1.0.0",
    "jupyterlab>=4.0.0",
    "seaborn>=0.13.0",
]

[project.scripts]
quantxalgo = "quantxalgo.cli:main"
qx-backtest = "quantxalgo.cli:run_backtest"
qx-server = "quantxalgo.cli:run_server"

[project.urls]
Homepage = "https://github.com/waqarazim/quantxalgo"
Documentation = "https://quantxalgo.readthedocs.io"
Repository = "https://github.com/waqarazim/quantxalgo"

[tool.setuptools.packages.find]
where = ["."]
include = ["quantxalgo*"]

[tool.black]
line-length = 100
target-version = ["py311"]
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py311"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"
